# neocognos-tui

./: Cargo.toml  README.md
src/: agent_thread.rs  app.rs  commands.rs  lib.rs  main.rs  session.rs
src/ui/: chat.rs  input.rs  layout.rs  mod.rs  prompt.rs  render.rs  sidebar.rs  spinner.rs  theme.rs
tests/: app_integration.rs
