[package]
name = "neocognos-tui"
version = "0.1.0"
edition = "2021"
description = "Rich terminal interface for the Neocognos agent kernel"

[dependencies]
neocognos-kernel = { path = "../neocognos-core/kernel" }
neocognos-protocol = { path = "../neocognos-core/protocol" }
neocognos-modules = { path = "../neocognos-core/modules" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
crossterm = "0.29"
syntect = "5"
rustyline = "14"
indicatif = "0.17"
termimad = "0.30"
